# kasmveh

./: .ghcid  .stylish-haskell.yaml  CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  default-nix.nix  default.nix  kasmveh.cabal
.github/workflows/: main.yml-disabled  nix.yml-disabled
examples/: Example1.hs  FizzBuzz.hs
lib/: Code.hs  Interpret.hs  Machine.hs
src/: Main.hs
